--- a/src/Nav.module.css
+++ b/src/Nav.module.css
@@ -123,10 +123,13 @@
 
 		position: absolute;
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		left: 0;
 		top: 0;
 		background-color: var(--color-black);
+		transform: translateX(110%);
+
+		transition: transform 1s ease-in-out;
 	}
 
 	.nav li {
