--- a/src/TabWrapper.module.css
+++ b/src/TabWrapper.module.css
@@ -8,8 +8,10 @@
 @media only screen and (max-width: 768px) {
 	.buttonWrapper {
 		position: absolute;
-		width: 100vw;
-		left: 0;
+		width: 99%;
+		
+		left: 50%;
+		transform: translateX(-50%);
 		flex-direction: row;
 	}
 }
